--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Contact</title>
 </head>
-<body>
-  </body>
+<body class="sitecontainer">
+    <h1 class="hidden">Contact Form Page</h1>
+    <header class="mainheader">
+          <nav id="mainnav">
+        		<h2 class="hidden">Main Navigation</h2>
+						<div class="ncontent">
+							<a id="logo" href="index.html"> <img src="images/bootcamp-logo.svg" alt="Forest City Designs Logo"></a>
+							<button id="button"></button>
+						</div>
+        		<div id="menucontent">
+        			<ul id="hamburgermenu">
+								<li><a href="index.html"> Home </a></li>
+								<li><a href="featured.html"> Featured </a></li>
+								<li><a href="portfolio.html"> Portfolio </a></li>
+								<li><a href="about.html"> About Us </a></li>
+								<li id="active"><a href="contact.html"> Contact</a></li>
+        			</ul>
+        		</div>
+        	</nav>
+        </header>
+
+        <section class="contactform">
+            <h3>Contact Form For Forest City Designs</h3>
+                <p>Please enter the follwing information as well as your question or concern</p>
+            <form class="formcon" action="email.php" method="POST" enctype="text/plain">
+                <input name="fullName" type="text" placeholder="First & Last Name">
+                <input name="contactInfo" type="text" required placeholder="Email Adress">
+                <input name="Subject" type="text" required placeholder="Subject">
+                <textarea name="msg" placeholder="Enter your questions here"></textarea>
+                <input id="submit" name="submit" type="button" value="Submit">
+            </form>
+        </section>
+
+        <footer class="mainfooter">
+            <h2 class="hidden">Footer</h2>
+            <nav class="footernav">
+              <h3 class="hidden"> Footer Nav</h3>
+            </nav>
+        </footer>
+
+    <script src="js/main.js"></script>
+</body>
+</html>
