--- a/about.html
+++ b/about.html
@@ -4,12 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <title>About</title>
 </head>
-<body>
-  </body>
+<body class="sitecontainer">
+    <h1 class="hidden">About Us</h1>
+    <header class="mainheader">
+          <nav id="mainnav">
+        		<h2 class="hidden">Main Navigation</h2>
+						<div class="ncontent">
+							<a id="logo" href="index.html"> <img src="images/bootcamp-logo.svg" alt="Forest City Designs Logo"></a>
+							<button id="button"></button>
+						</div>
+        		<div id="menucontent">
+        			<ul id="hamburgermenu">
+								<li><a href="index.html"> Home </a></li>
+								<li><a href="featured.html"> Featured </a></li>
+								<li><a href="portfolio.html"> Portfolio </a></li>
+								<li id="active"><a href="about.html"> About Us </a></li>
+								<li><a href="contact.html"> Contact</a></li>
+        			</ul>
+        		</div>
+        	</nav>
+        </header>
+
+        <section class="hero">
+    <h2 class="hidden">Hero Image</h2>
+    <div>
+      <img src="https://dummyimage.com/1920x400/000000/fff" alt="Hero image">
+    </div>
+</section>
+			<main>
+			<section class="about">
+				<h2 class="hidden">About Each Member </h2>
+				<div class="slides">
+					<div class="personpictures">
+            <img id="mainsmall" src="images/bootcamp-logo.svg" alt="">
+						<img src="images/Brody.jpg" alt="">
+						<img src="images/Brody.jpg" alt="">
+            <img src="images/Brody.jpg" alt="">
+            <img src="images/Brody.jpg" alt="">
+					</div>
+				</div>
+        <div class="textarea">
+          <h2>Forest City Designs and Crew</h2>
+				<p id="biotext">Click a name to view team member</p>
+      </div>
+			</section>
+			<section id="teammembers">
+        <h3 class="hidden">Team member buttons</h3>
+				<button data-offset="0" class="person">Our Company</button>
+        <button data-offset="1" class="person">Brody Billings</button>
+				<button data-offset="2" class="person">Roy Chan</button>
+				<button data-offset="3" class="person">Laura Albarracin</button>
+				<button data-offset="4" class="person">Leslie Deshaw</button>
+			</section>
+
+			</main>
+
+      <footer class="mainfooter">
+          <h2 class="hidden">Footer</h2>
+          <nav class="footernav">
+            <h3 class="hidden"> Footer Nav</h3>
+          </nav>
+      </footer>
+		<script src="js/main.js"></script>
+	</body>
+
+</html>
