--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         </header>
 
         <section class="contactform">
-            <h3>Contact Form For Forest City Designs</h3>
+            <h3>Contact Forest City Designs</h3>
                 <p>Please enter the follwing information as well as your question or concern</p>
             <form class="formcon" action="email.php" method="POST" enctype="text/plain">
                 <input name="fullName" type="text" placeholder="First & Last Name">
