added bio and photo

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 						<img src="images/Brody.jpg" alt="">
 						<img src="images/Brody.jpg" alt="">
             <img src="images/Brody.jpg" alt="">
-            <img src="images/Brody.jpg" alt="">
+            <img src="images/Leslie.png" alt="">
 					</div>
 				</div>
         <div class="textarea">
@@ -58,7 +58,7 @@
         <button data-offset="1" class="person">Brody Billings</button>
 				<button data-offset="2" class="person">Roy Chan</button>
 				<button data-offset="3" class="person">Laura Albarracin</button>
-				<button data-offset="4" class="person">Leslie Deshaw</button>
+				<button data-offset="4" class="person">Leslie DeShaw</button>
 			</section>
 
 			</main>
