added colours and styling

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.typekit.net/mcm1gbp.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Contact</title>
@@ -30,7 +31,7 @@
         </header>
 
         <section class="contactform">
-            <h3>Contact Forest City Designs</h3>
+            <h3>Contact Forest City Design</h3>
                 <p>Please enter the follwing information as well as your question or concern</p>
             <form class="formcon" action="email.php" method="POST" enctype="text/plain">
                 <input name="fullName" type="text" placeholder="First & Last Name">
