--- a/featured.html
+++ b/featured.html
@@ -7,9 +7,39 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/mcm1gbp.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Featured</title>
 </head>
-<body>
+  <body class="sitecontainer">
+    <h1 class="hidden">About Us</h1>
+    <header class="mainheader">
+          <nav id="mainnav">
+        		<h2 class="hidden">Main Navigation</h2>
+						<div class="ncontent">
+							<a id="logo" href="index.html"> <img src="images/bootcamp-logo.svg" alt="Forest City Design Logo"></a>
+							<button id="button"></button>
+						</div>
+        		<div id="menucontent">
+        			<ul id="hamburgermenu">
+								<li><a href="index.html"> Home </a></li>
+								<li><a href="featured.html"> Featured </a></li>
+								<li><a href="portfolio.html"> Portfolio </a></li>
+								<li id="active"><a href="about.html"> About Us </a></li>
+								<li><a href="contact.html"> Contact</a></li>
+        			</ul>
+        		</div>
+        	</nav>
+        </header>
+
+
+
+        <footer class="mainfooter">
+          <h2 class="hidden">Footer</h2>
+          <nav class="footernav">
+            <h3 class="hidden"> Footer Nav</h3>
+          </nav>
+      </footer>
+		<script src="js/main.js"></script>
   </body>
