CSS-Index-Portfolio-Featured

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://use.typekit.net/mcm1gbp.css">
+	<link rel="stylesheet" href="https://use.typekit.net/mcm1gbp.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <title>About</title>
@@ -14,7 +16,7 @@
           <nav id="mainnav">
         		<h2 class="hidden">Main Navigation</h2>
 						<div class="ncontent">
-							<a id="logo" href="index.html"> <img src="images/bootcamp-logo.svg" alt="Forest City Designs Logo"></a>
+							<a id="logo" href="index.html"> <img src="images/bootcamp-logo.svg" alt="Forest City Design Logo"></a>
 							<button id="button"></button>
 						</div>
         		<div id="menucontent">
@@ -45,10 +47,11 @@
 						<img src="images/Brody.jpg" alt="">
             <img src="images/Brody.jpg" alt="">
             <img src="images/Leslie.png" alt="">
+			<img src="images/Laura.jpg" alt="">
 					</div>
 				</div>
         <div class="textarea">
-          <h2>Forest City Designs and Crew</h2>
+          <h2>Forest City Design and Crew</h2>
 				<p id="biotext">Click a name to view team member</p>
       </div>
 			</section>
@@ -67,6 +70,13 @@
           <h2 class="hidden">Footer</h2>
           <nav class="footernav">
             <h3 class="hidden"> Footer Nav</h3>
+			<img src="images/logo-white.svg" height="250px" width="250px">
+        </div>
+        <div class="textFoot">
+            <p>©Forest City Design<br>
+              London, Ontario <br> 
+            </p>
+        </div>
           </nav>
       </footer>
 		<script src="js/main.js"></script>
