--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
 						<img src="images/Brody.jpg" alt="">
             <img src="images/Brody.jpg" alt="">
             <img src="images/Leslie.png" alt="">
+			<img src="images/Laura.jpg" alt="">
 					</div>
 				</div>
         <div class="textarea">
@@ -69,6 +70,13 @@
           <h2 class="hidden">Footer</h2>
           <nav class="footernav">
             <h3 class="hidden"> Footer Nav</h3>
+			<img src="images/logo-white.svg" height="250px" width="250px">
+        </div>
+        <div class="textFoot">
+            <p>©Forest City Design<br>
+              London, Ontario <br> 
+            </p>
+        </div>
           </nav>
       </footer>
 		<script src="js/main.js"></script>
