fixed bugs and added portfolio

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <section class="hero">
     <h2 class="hidden">Hero Image</h2>
     <div>
-      <img src="https://dummyimage.com/1920x400/000000/fff" alt="Hero image">
+      <img src="images/about_banner.png" alt="Hero image">
     </div>
 </section>
 			<main>
@@ -44,10 +44,10 @@
 					<div class="personpictures">
             <img id="mainsmall" src="images/bootcamp-logo.svg" alt="">
 						<img src="images/Brody.jpg" alt="">
-						<img src="images/Brody.jpg" alt="">
-            <img src="images/Brody.jpg" alt="">
-            <img src="images/Leslie.png" alt="">
+         
+			<img src="images/Roy.jpg" alt="">
 			<img src="images/Laura.jpg" alt="">
+			<img src="images/Leslie.png" alt="">
 					</div>
 				</div>
         <div class="textarea">
