--- a/featured.html
+++ b/featured.html
@@ -35,24 +35,24 @@
         <div class="hero">
           <div class="hero-img">
               <picture>
-                <source media="(min-width:740px)" srcset="https://via.placeholder.com/1890x380">
-                <source media="(min-width:480px)" srcset="https://via.placeholder.com/480x280">
-                <img src="https://via.placeholder.com/480x280" alt="Banner">
+                
+                <img src="images/Feauture_banner.png" alt="Banner">
 
               </picture>
           </div>
       </div>
         <div class="container_vid">
-            <video id="video1" width="620">
+            <video controls id="video1" width="620">
               <source src="./images/Motion_Design_Updated.mp4" type="video/mp4">
             </video>
-        </div>
+
+             </div>
             <div class="container_but"> 
               <button onclick="playPause()">Play/Pause</button> 
               <button onclick="makeBig()">Big</button>
               <button onclick="makeSmall()">Small</button>
               <br><br>
-          </div> 
+          </div>  
         </div>
         
         <script> 
