added some images to fix the port page and some html fixes

--- a/about.html
+++ b/about.html
@@ -44,14 +44,14 @@
 					<div class="personpictures">
             <img id="mainsmall" src="images/bootcamp-logo.svg" alt="">
 						<img src="images/Brody.jpg" alt="">
-         
+
 			<img src="images/Roy.jpg" alt="">
 			<img src="images/Laura.jpg" alt="">
 			<img src="images/Leslie.png" alt="">
 					</div>
 				</div>
         <div class="textarea">
-          <h2>Forest City Design and Crew</h2>
+          <h2 id="entryname">Forest City Design and Crew</h2>
 				<p id="biotext">Click a name to view team member</p>
       </div>
 			</section>
@@ -70,11 +70,10 @@
           <h2 class="hidden">Footer</h2>
           <nav class="footernav">
             <h3 class="hidden"> Footer Nav</h3>
-			<img src="images/logo-white.svg" height="250px" width="250px">
-        </div>
+            <img id="logow" src="images/logo-white.svg" alt="Logo in white">
         <div class="textFoot">
             <p>©Forest City Design<br>
-              London, Ontario <br> 
+              London, Ontario <br>
             </p>
         </div>
           </nav>
@@ -83,4 +82,3 @@
 	</body>
 
 </html>
-
