--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,10 @@
             <h2 class="hidden">Footer</h2>
             <nav class="footernav">
               <h3 class="hidden"> Footer Nav</h3>
-              <img src="images/logo-white.svg" height="250px" width="250px">
-          </div>
+              <img id="logow" src="images/logo-white.svg" alt="Logo in white">
           <div class="textFoot">
               <p>©Forest City Design<br>
-                London, Ontario <br> 
+                London, Ontario <br>
               </p>
           </div>
             </nav>
